--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -5,5 +5,5 @@ body {
   .jumbotron {
     background-image: url("../images/nasa.jpg");
     background-size: 100% 100%;
-    text-agligh: center;
+    text-align: center;
 }
